2007-09-16 [colin]	3.0.0cvs11-stable

	* src/folderview.c
	* src/image_viewer.c
	* src/matcher.c
	* src/messageview.c
	* src/common/plugin.c
		From 3.0.0cvs17:
		Fix bug 1311, 'Wrong arrow position
                while moving message into folder when
                column headers hidden'
		Show error in the GUI if image can't
                be loaded
		Fix spurious output
		Allow setting domain in msgid
		Add timing information

2007-09-16 [colin]	3.0.0cvs10-stable

	* src/account.c
	* src/compose.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/prefs_template.c
	* src/common/utils.c
		From 3.0.0cvs16:
		Remove Generate Message-ID option. We need
                this on some IMAP servers.

2007-09-16 [colin]	3.0.0cvs9-stable

	* src/prefs_filtering.c
	* src/prefs_filtering.h
	* src/prefs_filtering_action.c
	* src/common/tags.c
		From 3.0.0cvs15
		Fix tags issues: tags with spaces, renaming
                tags.

2007-09-16 [colin]	3.0.0cvs8-stable

	* src/folderview.c
	* src/main.c
	* src/mainwindow.c
		From 3.0.0cvs14
		Fix bug 1308, 'Claws deletes folderlist.xml after
                fetching mail short after start-up'

2007-09-16 [colin]	3.0.0cvs7-stable

	* src/compose.c
		From 3.0.0cvs13
		Fix scrolling to cursor

2007-09-16 [colin]	3.0.0cvs6-stable

	* src/folder.c
		From 3.0.0cvs11:
		do not allow locked msgs to be deleted,
                even by filtering/processing

2007-09-16 [colin]	3.0.0cvs5-stable

	* src/prefs_gtk.c
		From 3.0.0cvs9
		Add a missing linefeed to a debug message.


2007-09-16 [colin]	3.0.0cvs4-stable

	* src/inc.c
		From 3.0.0cvs8
		Fix statusbar/window mismatch on Maemo

2007-09-16 [colin]	3.0.0cvs3-stable

	* src/ldaputil.c
		From 3.0.0cvs7
		Fix build without USE_LDAP_TLS

2007-09-16 [colin]	3.0.0cvs2-stable

	* src/folder.c
	* src/imap.c
	* src/inc.c
	* src/mbox.c
	* src/send_message.c
	* src/statusbar.c
	* src/statusbar.h
		From 3.0.0cvs6
                Maemo: distinguish various statusbar messages,