@@ -2857,3 +2857,4 @@
 ( cvs diff -u -r 1.59.2.57 -r 1.59.2.58 src/prefs_filtering.c;  cvs diff -u -r 1.6.2.7 -r 1.6.2.8 src/prefs_filtering.h;  cvs diff -u -r 1.1.4.39 -r 1.1.4.40 src/prefs_filtering_action.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/common/tags.c;  ) > 3.0.0cvs9-stable.patchset
 ( cvs diff -u -r 1.61.2.67.2.1 -r 1.61.2.67.2.2 src/account.c;  cvs diff -u -r 1.382.2.406.2.1 -r 1.382.2.406.2.2 src/compose.c;  cvs diff -u -r 1.105.2.109 -r 1.105.2.110 src/prefs_account.c;  cvs diff -u -r 1.49.2.33 -r 1.49.2.34 src/prefs_account.h;  cvs diff -u -r 1.12.2.47 -r 1.12.2.48 src/prefs_template.c;  cvs diff -u -r 1.36.2.110 -r 1.36.2.111 src/common/utils.c;  ) > 3.0.0cvs10-stable.patchset
 ( cvs diff -u -r 1.207.2.181.2.1 -r 1.207.2.181.2.2 src/folderview.c;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/image_viewer.c;  cvs diff -u -r 1.75.2.47 -r 1.75.2.48 src/matcher.c;  cvs diff -u -r 1.94.2.150 -r 1.94.2.151 src/messageview.c;  cvs diff -u -r 1.13.2.29 -r 1.13.2.30 src/common/plugin.c;  ) > 3.0.0cvs11-stable.patchset
+( cvs diff -u -r 1.213.2.158.2.2 -r 1.213.2.158.2.3 src/folder.c;  ) > 3.0.0cvs12-stable.patchset
