@@ -1,3 +1,9 @@
+2007-09-16 [colin]	3.0.0cvs12-stable
+
+	* src/folder.c
+		From 3.0.0cvs18:
+		Fix possible leak
+
 2007-09-16 [colin]	3.0.0cvs11-stable
 
 	* src/folderview.c
